More small changes.

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
       <section>
         <div id="title">
-          <h1>GitHub Pages Midnight Theme</h1>
-          <h5>Design for the web to succeed and you too will succeed.</h5>
+          <h1>Xylemase: xylem- (wood), -ase (cut). I like to carve wood.</h1>
+          <h5>I also like to carve code</h5>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/mattgraham">mattgraham</a></span>
+          <span class="credits left">Project maintained by <a href="https://github.com/xylemase">xylemase</a></span>
           <span class="credits right">This project is released under the terms of the MIT license.</span>
         </div>
 
