--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <section>
         <div id="title">
-          <h1>Xylemase: xylem- (wood), -ase (cut). I like to carve wood.</h1>
+          <h1>Xylemase <br/ > I like to carve wood.</h1>
           <h5>I also like to carve code</h5>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/xylemase">xylemase</a></span>
