--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   </head>
   <body>
-    <div id="header">
+    <!-- <div id="header">
       <div class="wrapper">
         <a href="https://github.com/mattgraham/midnight" class="btn">View On GitHub</a>
         <ul class="nav">
@@ -33,8 +33,8 @@
 
       <section>
         <div id="title">
-          <h1>Xylemase <br/ > I like to carve wood.</h1>
-          <h5>I also like to carve code</h5>
+          <h1>Xylemase</h1>
+          <h5>I like to carve wood, and code</h5>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/xylemase">xylemase</a></span>
           <span class="credits right">This project is released under the terms of the MIT license.</span>
@@ -83,7 +83,7 @@ $ git checkout gh-pages
   <span class="n">attribute</span> <span class="ss">:name</span><span class="p">,</span> <span class="nb">String</span>
 <span class="k">end</span>
 </pre>
-</div>
+</div> -->
 
 
 <p>So, this is what HTML Code looks like</p>
