--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   </head>
   <body>
-    <!-- <div id="header">
+    <div id="header">
       <div class="wrapper">
         <a href="https://github.com/mattgraham/midnight" class="btn">View On GitHub</a>
         <ul class="nav">
@@ -34,7 +34,7 @@
       <section>
         <div id="title">
           <h1>Xylemase</h1>
-          <h5>I like to carve wood, and code</h5>
+          <h5>I like to carve wood, and code.</h5>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/xylemase">xylemase</a></span>
           <span class="credits right">This project is released under the terms of the MIT license.</span>
@@ -50,7 +50,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-        <p>As we do, we're open sourcing the front end code for the new GitHub pages themes. This is just one of the many beautiful themes that can used to dynamically turn your static repo into a beautiful marketing site.  </p>
+        <!-- <p>As we do, we're open sourcing the front end code for the new GitHub pages themes. This is just one of the many beautiful themes that can used to dynamically turn your static repo into a beautiful marketing site.  </p>
 
         <h2>Designer Templates</h2>
         <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your page content will be preserved if it remained in markdown format.</p>
