--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <section>
         <div id="title">
           <h1>Xylemase</h1>
-          <h5>I like to carve wood, and code.</h5>
+          <h3>Pronounced: zy-le-maze.
+          <h5>I carve wood. Also code and documentation.</h5>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/xylemase">xylemase</a></span>
           <span class="credits right">This project is released under the terms of the MIT license.</span>
