--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section>
         <div id="title">
           <h1>Xylemase</h1>
-          <h3>Pronounced: zy-le-maze.
+          <h4>Pronounced: zy-le-maze.</h4>
           <h5>I carve wood. Also code and documentation.</h5>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/xylemase">xylemase</a></span>
